--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
-
-
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
+ /* Large desktop */
+      @media (min-width: 980px) { 
+        body {
+         padding-top: 60px;
+        }
+       .linediv-l {
+         border-right: 1px white solid;
+        }
+       .linediv-r {
+         border-left: 1px white solid;
+       }
       }
+
+
       .container {
         width: 960px;
       }
