--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Fayez's First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -14,8 +14,8 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
-/* Large Desktop *?/
-    @media (min-width: 980px) { 
+      /* Large Desktop */
+      @media (min-width: 980px) { 
         body {
          padding-top: 60px;
         }
@@ -27,7 +27,7 @@
        }
       }
 
-/* Landscape phones and down */
+      /* Landscape phones and down */
       @media (max-width: 480px) { 
        .copy {
          padding: 2.5% 10%;
@@ -101,8 +101,8 @@
   </head>
   <body>
 
-    <!-- Mobile-friendly navbar adapted from example. -->
-    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <!-- Mobile-friendly navbar  -->
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -124,31 +124,30 @@
       </div>
     </div>
 
-    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
-    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
-    <!-- http://stackoverflow.com/a/12270322 -->
+
     <div class="container">
+
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
-      <!-- www.google.com/fonts/specimen/Ubuntu -->
-      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>House Finder</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
+
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Locate your new <em>House</em>, <em>Flat</em>, or <em>Land</em> by just driving or walking</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://imageshack.us/scaled/large/46/2o0w.jpg" width="480" height="300">
         </div>
 
-        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
@@ -173,21 +172,21 @@
             </div>
           </div>
           <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+
+
             <div class="thermometer progress active">
               <div class="bar bar-success" style="width: 60%;"></div>
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+
+
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
           <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+
+
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
@@ -195,26 +194,26 @@
       </div>
 
       <!-- Beyond this part the marketing copy begins. -->
-      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
-      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
-      <!-- http://placehold.it -->
+
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://imageshack.us/scaled/large/547/kygt.jpg
+" width="480" height="250">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    You have just accepted another job, in a new area of your town.
+	    The daily commute is killing you makeing life for exauhtive.  
+	    So you agree with oyur spuse to find a new home closer to your work. 
+	    but you shop arown and there are many real-estate offices and many signed and
+	    you do not have the time to llok at them all.
+
+	    Wouldn't by just walking, you phone alets you , "I find you dream home nearby."
+
+	    This is the scenario we as parents, students and workes face in life.  
+	    wouln't be possible if you could by just walking, or driving to find 
+	    a home to buy, a flat to rent, or a new land to build your house on.
+
           </p>
         </div>
       </div>
@@ -222,27 +221,22 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    This is the proposal for this appliation, where real-estate agents, 
+	    or indvouals post their offering by location (linked to google maps). 
+	    Customers just by walking will see what is offers by the area or by 
+	    searching for an area.  also potencial customers could set up flags, 
+	    for hot deals.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://imageshack.us/scaled/large/24/l73w.jpg
+" width="480" height="300">
         </div>
       </div>
 
       <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
-      <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+
       <div class="row-fluid faq">
           <div class="span10 offset1">
             <h3>FAQ</h3>
@@ -278,8 +272,7 @@
 
       </div>
 
-      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
-      <!-- http://creativecommons.org/licenses/ -->
+
       <div class="row-fluid footer">
         <div class="span12">
           <p>This work is licensed under
